[package]
name = "int-conv"
description = "Explicit integer conversions"
readme = "README.md"
license = "MIT"
license_file = "LICENSE"
version = "0.1.0"
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
repository = "https://github.com/Zenithsiz/int-conv"
keywords = ["no_std"]
categories = ["Encoding", "No standard library"]

[dependencies]

# Note: All dependencies as #![no_std]

static_assertions = "1.1"
